# mdx_math_svg

./: .gitignore  LICENSE  README.md  mdx_math_svg.py  setup.cfg
.github/workflows/: publish-to-pypi.yml
