[metadata]
name = mdx_math_svg
version = 1.0.0
description = SVG Math extension for Python-Markdown
long_description = file: README.md
long_description_content_type = text/markdown
author = Cris Luengo
author_email = lueng@ieee.org
url = https://github.com/crisluengo/mdx_math_svg
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Text Processing :: Markup :: Markdown

[options]
py_modules = mdx_math_svg
python_requires = >=3.6
install_requires = Markdown>=3.0

[options.entry_points]
markdown.extensions =
    mdx_math = mdx_math_svg:MathSvgExtension
